fix menu dropdown hover color in dark mode

--- a/client/src/components/Style.css
+++ b/client/src/components/Style.css
@@ -251,6 +251,11 @@ body {
   transition: none;
 }
 
+.menu-dark .ant-dropdown-menu-item:hover,
+.ant-dropdown-menu-submenu-title:hover {
+  background-color: #303031;
+}
+
 /* .popupstyle div.ant-popover-inner {
   background-color: #303030;
 }
